--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,9 @@ a {
   text-decoration: none;
 }
 
+.circle-image {
+  clip-path: circle();
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
